# personal_website

./: CNAME  F1_camera.md  README.md  _config.yml  about.md  index.markdown  masters-dissertation.markdown  robohub_posts.html
_includes/: head.html  sidebar.html
_layouts/: default.html  home_page.html
_posts/: .2020-03-06-Microlocation.markdown.swp  2013-12-28-introducing-hyde.md  2014-10-19-elderly-acceptance-of-robotics.markdown  2015-12-01-Masters-Dissertation.markdown  2016-05-01-Evolutionary-approaches-for-flying-robots.markdown  2016-10-31-teach-xemo-to-move.markdown  2016-12-11-actuation-for-robotic-fingers.markdown  2017-02-04-RoboUniverse-conference-agricultural-robotics.markdown  2017-02-19-Robouniverse-conference-Drone-AI-3D-printing.markdown  2017-05-28-locus-robotics-rick-faulk.markdown  2018-01-20-embedded-platform-for-slam.markdown  2018-02-18-collaborative-systems-for-drug-discovery.markdown  2018-05-29-cozmo-anki.markdown  2019-03-05-On-Demand-Drone-Delivery.markdown  2020-03-06-Microlocation.markdown  2020-06-29-solid-state-lidar.markdown  2020-10-16-empowering-farmers-through-root-ai.markdown  2020-12-16-the-advantage-of-fins.markdown  2021-01-18-deep-sea-mining.markdown  2021-03-12-construction-site-automation.markdown  2021-06-10-intel-realsense.markdown  2021-07-12-autonomous-aircraft-xwing.markdown  2022-03-08-ep.347-Event-Cameras-–-An-Evolution-in-Visual-Data-Capture-with-Davide-Scaramuzza.md  2022-04-08-ep.349-Autonomous-Need-for-Speed-with-Joe-Speed.md  (+6 more)
_scripts/poetry-python-scripts/: generate_robohub_post.py  pyproject.toml
(+51 files in other folders)
