[tool.poetry]
name = "poetry-python-scripts"
version = "0.1.0"
description = ""
authors = ["abatedemey <abatedemey@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_python_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
